<resources>
    <string name="app_name">DepremRadari</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter1">1–2</string>
    <string name="filter2">2–3</string>
    <string name="filter3">3–4</string>
    <string name="filter4">4+</string>
    <string name="soz">Felaket başa gelmeden evvel</string>
    <string name="soz1">önleyici ve koruyucu</string>
    <string name="soz2">tedbirleri</string>
    <string name="soz3">düşünmek lazımdır, geldikten sonra</string>
    <string name="soz4">dövünmenin yararı yoktur.</string>
    <string name="HEAD1">TÜRKİYE</string>
    <string name="HEAD2">DEPREM RADARI</string>
    <string name="Info">Verilerin geç yüklenmesi seçilen kaynağın sunucuları ile alakalıdır.
                        Beklemeye devam edebilir veya başka bir kaynak seçebilirsiniz.</string>
    <string name="video">Deprem tabikatı ile ilgili bilgilendirici videolar bulunmaktadır.</string>
    <string name="test">Depreme hazır mısın haydi gel bunu ölçelim.</string>
    <string name="çanta">Deprem çantasında neler bulunmalıdır biliyor musun?</string>
    <string name="info">Deprem sana gelmeden sen depreme git önlemini nasıl alacağını öğren.</string>
    <string name="ayarlar1">Deprem Veri Kaynağı</string>
    <string name="ayarlar2">Deprem Şiddeti</string>
    <string name="ayarlar3">Zaman</string>
    <string name="ayarlar4">Gizlilik</string>
    <string name="ayarlar5">Uygulamaya Destek Ol</string>
    <string name="deprem_cantasi">Deprem Çantası</string>
    <string name="deprem_tatbikat_video">Deprem Tatbikatı Video</string>
    <string name="deprem_tatbikat_test">Deprem Tatbikatı Test</string>
    <string name="onlemAl">Depreme Nasıl Önlem Alırım</string>
    <string name="backbutton">backbutton</string>
    <string name="gıda">Yüksek kalorili, vitamin ve karbonhidrat içeren, su kaybını önleyen ve dayanıklı (çabuk bozulmayan)
        gıdalar (Konserve, kuru meyveler, tahin–pekmez, meyve suyu, vb.).</string>
    <string name="belge">
         "\u2022 Kimlik kartları (nüfus cüzdanı, ehliyet vb.)\n"
         "\u2022 Tapu, sigorta, ruhsat belgeleri\n"
         "\u2022 Zorunlu Deprem Poliçesi"
         "\u2022 Diplomalar\n"
         "\u2022 Pasaport, banka cüzdanı vb.\n"
         "\u2022 Diğer (evcil hayvan sağlık karnesi, vb.)"
    </string>
    <string name="giyecekler">
         "\u2022 İç çamaşırı\n"
         "\u2022 Çorap\n"
         "\u2022 Yağmurluk\n"
         "\u2022 İklime uygun giysiler"
    </string>
    <string name="su">Ailedeki her bir üye için 3 günlük su (kişi başı 4 litre),</string>
    <string name="hijyen">
        "\u2022 Sabun ve Dezenfektanlar\n"
         "\u2022 Diş fırçası ve macunu\n"
         "\u2022 Islak mendil\n"
         "\u2022 Hijyenik ped\n"
         "\u2022 Tuvalet kâğıdı"
    </string>
    <string name="diger_malzemeler">
        "\u2022 İlk yardım çantası\n"
        "\u2022 Toz maskesi\n"
         "\u2022 Uyku tulumu veya battaniye\n"
         "\u2022 Çakı, düdük, küçük makas\n"
         "\u2022 Kâğıt, kalem\n"
         "\u2022 Pilli radyo, el feneri ve yedek piller (dayanıklı/uzun ömürlü pil seçilmeli)\n"
         "\u2022 Kerpeten, İngiliz anahtarı ve tornavida"
    </string>
    <string name="bebekli_aile">
        "\u2022 Bebek için ilaç, vitamin ve mineraller\n"
        "\u2022 Hazır mama (anne sütünün olmadığı ya da yetmediği durumlar için)\n"
         "\u2022 Bebek bezi ve ıslak mendil\n"
         "\u2022 Oyuncak\n"
         "\u2022 Bebek battaniyesi ve kıyafet\n"
    </string>
    <string name="ilk_yardım1">
        "\u2022 Alerji ilaçları\n"
        "\u2022 Alüminyum yanık örtüsü\n"
         "\u2022 Antiseptik krem\n"
         "\u2022 Aspirin veya Asetaminofen\n"
         "\u2022 Atel\n"
        "\u2022 Bandaj\n"
        "\u2022 Baticon\n"
         "\u2022 Bebek airway\n"
         "\u2022 Bistüri ucu\n"
         "\u2022 Boyunluk\n"
    </string>
    <string name="ilk_yardım2">
         "\u2022 Cımbız\n"
        "\u2022 Çengelli iğne\n"
        "\u2022 El feneri\n"
         "\u2022 Enjektör\n"
         "\u2022 Flaster\n"
         "\u2022 Gazlı bez\n"
        "\u2022 Her boyutta yara bandı\n"
         "\u2022 İlk yardım kitabı\n"
         "\u2022 Makas\n"
        "\u2022 \n"
        "\n"
    </string>
    <string name="binada">
         "\u2022 Sabitlenmemiş dolap, raf, pencere vb. eşyalardan uzak durulmalıdır.\n"
        "\n"
         "\u2022 Varsa sağlam sandalyelerle desteklenmiş masa altına veya dolgun ve hacimli koltuk, kanepe, içi dolu sandık gibi koruma sağlayabilecek eşya yanına çömelerek hayat üçgeni oluşturulmalıdır.\n"
         "\n"
         "\u2022 Baş iki el arasına alınarak veya bir koruyucu (yastık, kitap vb) malzeme ile korunmalıdır. Sarsıntı geçene kadar bu pozisyonda beklenmelidir.\n"
         "\n"
         "\u2022 Güvenli bir yer bulup, diz üstü ÇÖK, Başını ve enseni koruyacak şekilde KAPAN, Düşmemek için sabit bir yere TUTUN\n"
        "\n"
         "\u2022 Merdivenlere ya da çıkışlara doğru koşulmamalıdır.\n"
         "\n"
    </string>
    <string name="binada2">
        "\u2022 Balkona çıkılmamalıdır.\n"
        "\n"
         "\u2022 Balkonlardan ya da pencerelerden aşağıya atlanmamalıdır.\n"
        "\n"
        "\u2022 Kesinlikle asansör kullanılmamalıdır.\n"
        "\n"
        "\u2022 Telefonlar acil durum ve yangınları bildirmek dışında kullanılmamalıdır.\n"
        "\n"
        "\u2022 Kibrit, çakmak yakılmamalı, elektrik düğmelerine dokunulmamalıdır.\n"
    </string>
    <string name="binada3">
        "\u2022 Tekerlekli sandalyede isek tekerlekler kilitlenerek baş ve boyun korumaya alınmalıdır.\n"
        "\n"
        "\u2022 Mutfak, imalathane, laboratuvar gibi iş aletlerinin bulunduğu yerlerde; ocak, fırın ve bu gibi cihazlar kapatılmalı, dökülebilecek malzeme ve maddelerden uzaklaşılmalıdır.\n"
        "\n"
        "\u2022 Sarsıntı geçtikten sonra elektrik, gaz ve su vanalarını kapatılmalı, soba ve ısıtıcılar söndürülmelidir.\n"
        "\n"
        "\u2022 Diğer güvenlik önlemleri alınarak gerekli olan eşya ve malzemeler alınarak bina daha önce tespit edilen yoldan derhal terk edilip toplanma bölgesine gidilmelidir.\n"
        "\n"
        "\u2022 Okulda sınıfta ya da büroda ise sağlam sıra, masa altlarında veya yanında; koridorda ise duvarın yanına hayat üçgeni oluşturacak şekilde ÇÖK-KAPAN-TUTUN hareketi ile baş ve boyun korunmalıdır.\n"
        "\n"
        "\u2022 Pencerelerden ve camdan yapılmış eşyalardan uzak durulmalıdır.\n"
    </string>
    <string name="acikAlan">
        "\u2022 Enerji hatları ve direklerinden, ağaçlardan, diğer binalardan ve duvar diplerinden uzaklaşılmalıdır. Açık arazide çömelerek etraftan gelen tehlikelere karşı hazırlıklı olunmalıdır.\n"
        "\n"
        "\u2022 Toprak kayması olabilecek, taş veya kaya düşebilecek yamaç altlarında bulunulmamalıdır. Böyle bir ortamda bulunuluyorsa seri şekilde güvenli bir ortama geçilmelidir.\n"
        "\n"
        "\u2022 Binalardan düşebilecek baca, cam kırıkları ve sıvalara karşı tedbirli olunmalıdır.\n"
        "\n"
        "\u2022 Toprak altındaki kanalizasyon, elektrik ve gaz hatlarından gelecek tehlikelere karşı dikkatli olunmalıdır.\n"
        "\n"
        "\u2022 Deniz kıyısından uzaklaşılmalıdır\n"
        "\n"
    </string>
    <string name="aracta">
        "\u2022 Sarsıntı sırasında karayolunda seyir halindeyseniz; \n"
        "\n"
        "\u2022 Bulunduğunuz yer güvenli ise; yolu kapatmadan sağa yanaşıp durulmalıdır. Kontak anahtarı yerinde bırakılıp, pencereler kapalı olarak araç içerisinde beklenmelidir. Sarsıntı durduktan sonra açık alanlara gidilmelidir. \n"
        "\n"
        "\u2022 Araç meskun mahallerde ya da güvenli bir yerde değilse (ağaç ya da enerji hatları veya direklerinin yanında, köprü üstünde vb.); durdurulmalı, kontak anahtarı üzerinde bırakılarak terk edilmeli ve trafikten uzak açık alanlara gidilmelidir. \n"
        "\n"
    </string>
    <string name="toplu_tasima">
        "\u2022 Gerekmedikçe, kesinlikle metro ve trenden inilmemelidir. Elektriğe kapılabilirsiniz veya diğer hattan gelen başka bir metro yada tren size çarpabilir. \n"
        "\n"
        "\u2022 Sarsıntı bitinceye kadar metro ya da trenin içinde, sıkıca tutturulmuş askı, korkuluk veya herhangi bir yere tutunmalı, metro veya tren personeli tarafından verilen talimatlara uyulmalıdır. \n"
        "\n"

    </string>
    <string name="kapalı_alan1">
        "\u2022 Önce kendi emniyetinizden emin olun. \n"
        "\n"
        "\u2022 Sonra çevrenizde yardım edebileceğiniz kimse olup olmadığını kontrol edin. \n"
        "\n"
        "\u2022 Depremlerden sonra çıkan yangınlar oldukça sık görülen ikincil afetlerdir. Bu nedenle eğer gaz kokusu alırsanız, gaz vanasını kapatın. Camları ve kapıları açın. Hemen binayı terk edin. \n"
        "\n"
        "\u2022 Dökülen tehlikeli maddeleri temizleyin. \n"
        "\n"
    </string>
    <string name="kapalı_alan2">
        "\u2022 Yerinden oynayan telefon ahizelerini telefonun üstüne koyun. \n"
        "\n"
        "\u2022 Acil durum çantanızı yanınıza alın, mahalle buluşma noktanıza doğru harekete geçin. \n"
        "\n"
        "\u2022 Radyo ve televizyon gibi kitle iletişim araçlarıyla size yapılacak uyarıları dinleyin. \n"
        "\n"
        "\u2022 Cadde ve sokakları  acil yardım araçları için boş bırakın. \n"
        "\n"
        "\u2022 Her büyük depremden sonra mutlaka artçı depremler olur. Artçı depremler zaman içerisinde seyrekleşir ve büyüklükleri azalır. Artçı depremler hasarlı binalarda zarara yol açabilir. Bu nedenle sarsıntılar tamamen bitene kadar hasarlı binalara girilmemelidir. Artçı depremler sırasında da ana depremde yapılması gerekenler yapılmalıdır. \n"
        "\n"
    </string>
    <string name="acik_alan">
        "\u2022Çevrenizdeki hasara dikkat ederek bunları not edin. \n"
        "\n"
        "\u2022Hasarlı binalardan ve enerji nakil hatlarından uzak durun. \n"
        "\n"
        "\u2022Önce yakın çevrenizde acil yardıma gerek duyanlara yardım edin. \n"
        "\n"
        "\u2022Sonra mahalle toplanma noktanıza gidin. \n"
        "\n"
        "\u2022Yardım çalışmalarına katılın. Özel ilgiye ihtiyacı olan afetzedelere -yaşlılar, bebekler, hamileler, engelliler- yardımcı olun. \n"
        "\n"
    </string>
    <string name="enkazda">
        "\u2022 Paniklemeden durumunuzu kontrol edin.\n"
        "\n"
        "\u2022 Hareket kabiliyetiniz kısıtlanmışsa çıkış için hayatınızı riske atacak hareketlere kalkışmayın. Biliniz ki kurtarma ekipleri en kısa zamanda size ulaşmak için çaba gösterecektir.\n"
        "\n"
        "\u2022 Enerjinizi en tasarruflu şekilde kullanmak için hareketlerinizi kontrol altında tutun.\n"
        "\n"
        "\u2022 El ve ayaklarınızı kullanabiliyorsanız su, kalorifer, gaz tesisatlarına, zemine vurmak suretiyle varlığınızı duyurmaya çalışın.\n"
        "\n"
        "\u2022 Sesinizi kullanabiliyorsanız kurtarma ekiplerinin seslerini duymaya ve onlara seslenmeye çalışınız. Ancak enerjinizi kontrollü kullanın.\n"
        "\n"
    </string>
    <string name="deprem_oncesi1">
        "\u2022 Yerleşim bölgeleri titizlikle belirlenmelidir. Kaygan ve ovalık bölgeler iskana açılmamalıdır. Konutlar gevşek toprağa sahip meyilli arazilere yapılmamalıdır. \n"
        "\n"
        "\u2022 Yapılar deprem etkilerine karşı dayanıklı inşa edilmelidir. (Yapı Tekniğine ve İnşaat Yönetmeliğine uygun olarak) \n"
        "\n"
        "\u2022 İmar planında konuta ayrılmış yerler dışındaki yerlere ev ve bina yapılmamalıdır. \n"
        "\n"
        "\u2022 Dik yarların yakınına, dik boğaz ve vadilerin içine bina yapılmamalıdır. \n"
        "\n"
        "\u2022 Çok kar yağan ve çığ gelen yamaçlarda bina yapılmamalıdır. \n"
        "\n"
        "\u2022 Mevcut binaların dayanıklılıkları artırılmalıdır. \n"
        "\n"
        "\u2022 Konutlara deprem sigortası yaptırılmalıdır. \n"
        "\n"
    </string>
</resources>