<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/genel"
    >
<LinearLayout
    android:id="@+id/load"
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:layout_marginTop="150dp"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:src="@drawable/loading"
        android:importantForAccessibility="no" />
</LinearLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:padding="0dp"
        android:textSize="64sp"
        android:textAlignment="center"
        android:text="@string/HEAD1"
        android:textColor="@color/turk"
        android:fontFamily="@font/etrusconowcondensedbold"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textAlignment="center"
        android:text="@string/HEAD2"
        android:textColor="@color/darkslategray"
        android:fontFamily="@font/zurich_extra_condensed_bold"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="80dp">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textAlignment="center"
            android:text="@string/soz"
            android:textColor="@color/darkslategray"
            android:fontFamily="@font/biennale_regular"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textAlignment="center"
            android:text="@string/soz1"
            android:textColor="@color/darkslategray"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/sauce_grotesk_medium"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textAlignment="center"
            android:text="@string/soz2"
            android:textColor="@color/darkslategray"
            android:fontFamily="@font/sauce_grotesk_medium"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textAlignment="center"
            android:text="@string/soz3"
            android:textColor="@color/darkslategray"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/biennale_regular"
            android:layout_gravity="center"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textAlignment="center"
        android:text="@string/soz4"
        android:textColor="@color/darkslategray"
        android:fontFamily="@font/biennale_regular"
        android:layout_gravity="center"/>
    <ImageView
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:src="@drawable/ataturk_imza"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:layout_gravity="center"
        android:importantForAccessibility="no" />

</LinearLayout>