<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightcyan"
    tools:context=".TatbikatFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:theme="@style/Base.Theme.AppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orange"
        app:titleTextAppearance="@style/appBar.TextAppearance.Bold"
        app:title="Depreme Tatbikatı"
        app:titleTextColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="65dp"
        android:background="@drawable/tatbikat_backround">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/lightorange"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="false"
            android:id="@+id/card_1"
            android:layout_gravity="center"
            android:layout_marginTop="80dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deprem_tatbikat_video"
                    android:textColor="@color/orange"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="center"
                    android:layout_marginEnd="10dp"
                    />
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/play"/>
            </LinearLayout>

            <TextView
                android:background="@color/white"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:text="@string/video"
                android:textSize="16sp"
                android:layout_marginTop="50dp"
                android:paddingVertical="10dp">
            </TextView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/lightorange"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="false"
            android:id="@+id/card_2"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deprem_tatbikat_test"
                    android:textColor="@color/orange"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="center"
                    android:layout_marginEnd="10dp"
                    />
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/test"/>
            </LinearLayout>

            <TextView
                android:background="@color/white"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:text="@string/test"
                android:layout_marginTop="50dp"
                android:textSize="16sp"
                android:paddingVertical="10dp">
            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/lightorange"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="false"
            android:id="@+id/card_3"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deprem_cantasi"
                    android:textColor="@color/orange"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="center"
                    android:layout_marginEnd="10dp"
                    />
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/backpack"/>
            </LinearLayout>

            <TextView
                android:background="@color/white"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:text="@string/çanta"
                android:layout_marginTop="50dp"
                android:textSize="16sp"
                android:paddingVertical="10dp">
            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/lightorange"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="false"
            android:id="@+id/card_4"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onlemAl"
                    android:textColor="@color/orange"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="center"
                    android:layout_marginEnd="10dp"/>
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/info"/>
            </LinearLayout>

            <TextView
                android:background="@color/white"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:text="@string/info"
                android:layout_marginTop="50dp"
                android:paddingVertical="10dp"
                android:textSize="16sp">
            </TextView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>