<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/animationView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".DepremlerFragment">

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_layout" />

        <LinearLayout
            android:id="@+id/filterBar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/resourceImage"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:src="@drawable/kandilli"
                android:layout_marginStart="5dp"
                android:background="@color/white"
                android:importantForAccessibility="no" />
            <androidx.cardview.widget.CardView
                android:layout_width="56dp"
                android:layout_height="28dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/green"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="false"
                android:id="@+id/card_filter1"
                android:layout_gravity="center"
                android:layout_marginStart="20dp">
                <Button
                    android:id="@+id/filter1"
                    android:layout_width="56dp"
                    android:layout_height="28dp"
                    android:textSize="16sp"
                    android:text="@string/filter1"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:background="@android:color/transparent"
                    android:padding="0dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="56dp"
                android:layout_height="28dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/yellow"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="false"
                android:id="@+id/card_filter2"
                android:layout_gravity="center"
                android:layout_marginStart="20dp">
                <Button
                    android:id="@+id/filter2"
                    android:layout_width="56dp"
                    android:layout_height="28dp"
                    android:textSize="16sp"
                    android:text="@string/filter2"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:background="@android:color/transparent"
                    android:padding="0dp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="56dp"
                android:layout_height="28dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/orange"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="false"
                android:id="@+id/card_filter3"
                android:layout_gravity="center"
                android:layout_marginStart="20dp">
                <Button
                    android:id="@+id/filter3"
                    android:layout_width="56dp"
                    android:layout_height="28dp"
                    android:textSize="16sp"
                    android:text="@string/filter3"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:background="@android:color/transparent"
                    android:padding="0dp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="56dp"
                android:layout_height="28dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/Depremred"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="false"
                android:id="@+id/card_filter4"
                android:layout_gravity="center"
                android:layout_marginStart="20dp">
                <Button
                    android:id="@+id/filter4"
                    android:layout_width="56dp"
                    android:layout_height="28dp"
                    android:textSize="16sp"
                    android:text="@string/filter4"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:background="@android:color/transparent"
                    android:padding="0dp"
                    />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_marginTop="45dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lottie_rawRes="@raw/load"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_colorFilter="@color/Depremred"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text=".:LÜTFEN BEKLEYİNİZ:." />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="Kaynak Verileri Yükleniyor..." />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingHorizontal="15dp"
            android:textColor="#9F3C3C3C"
            android:text="@string/Info" />
    </LinearLayout>

</FrameLayout>